Kubernetes/kroki/assets/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kroki-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: gitlab.yoonjin2.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-kroki
            port:
              number: 8000
  tls:
  - hosts:
    - gitlab.yoonjin2.kr
    secretName: kroki-tls-secret
